{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 87,
  "lineage": "92732eba-4e72-bdc7-ec04-6e8a69459593",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a69042b97e6a1b4",
            "arn": "arn:aws:ec2:us-west-2:396608795484:elastic-ip/eipalloc-02a69042b97e6a1b4",
            "association_id": "eipassoc-0bbd144172fa92192",
            "domain": "vpc",
            "id": "eipalloc-02a69042b97e6a1b4",
            "instance": "i-0ea6a967f018c7924",
            "network_border_group": "us-west-2",
            "network_interface": "eni-05ee4460ee3dbfc54",
            "private_dns": "ip-10-0-1-67.us-west-2.compute.internal",
            "private_ip": "10.0.1.67",
            "public_dns": "ec2-54-201-49-139.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.49.139",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "provision-eip"
            },
            "tags_all": {
              "Name": "provision-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.example",
            "aws_security_group.example",
            "aws_subnet.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c779fe4d45aced3d",
            "arn": "arn:aws:ec2:us-west-2:396608795484:instance/i-0ea6a967f018c7924",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea6a967f018c7924",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "fb-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05ee4460ee3dbfc54",
            "private_dns": "ip-10-0-1-67.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.67",
            "public_dns": "ec2-35-84-134-21.us-west-2.compute.amazonaws.com",
            "public_ip": "35.84.134.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0169b4db3d8a243e5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0182f03e7f0daa8e7",
            "tags": {
              "Name": "provision-vm"
            },
            "tags_all": {
              "Name": "provision-vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca2c1eb2dd935ae4"
            ]
          },
          "dependencies": [
            "aws_security_group.example",
            "aws_subnet.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:396608795484:internet-gateway/igw-0de5d73e19cf36f11",
            "id": "igw-0de5d73e19cf36f11",
            "owner_id": "396608795484",
            "tags": {
              "Name": "provision-igw"
            },
            "tags_all": {
              "Name": "provision-igw"
            },
            "vpc_id": "vpc-0e2c31b82137eefd1"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:396608795484:route-table/rtb-0f62c577effc12ce4",
            "id": "rtb-0f62c577effc12ce4",
            "owner_id": "396608795484",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de5d73e19cf36f11",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "provision-route-table"
            },
            "tags_all": {
              "Name": "provision-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2c31b82137eefd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f37306d14519011",
            "route_table_id": "rtb-0f62c577effc12ce4",
            "subnet_id": "subnet-0182f03e7f0daa8e7"
          },
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_route_table.example",
            "aws_subnet.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:396608795484:security-group/sg-0ca2c1eb2dd935ae4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca2c1eb2dd935ae4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "provision-sg",
            "name_prefix": "",
            "owner_id": "396608795484",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "provision-sg"
            },
            "tags_all": {
              "Name": "provision-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2c31b82137eefd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:396608795484:subnet/subnet-0182f03e7f0daa8e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0182f03e7f0daa8e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396608795484",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "provision-subnet"
            },
            "tags_all": {
              "Name": "provision-subnet"
            },
            "vpc_id": "vpc-0e2c31b82137eefd1"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:396608795484:vpc/vpc-0e2c31b82137eefd1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0efc4f1637fade19f",
            "default_route_table_id": "rtb-0376ce1074c0c5af2",
            "default_security_group_id": "sg-00a0e655c519a5ae1",
            "dhcp_options_id": "dopt-062cb748f794683ec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2c31b82137eefd1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0376ce1074c0c5af2",
            "owner_id": "396608795484",
            "tags": {
              "Name": "provision-vpc"
            },
            "tags_all": {
              "Name": "provision-vpc"
            }
          }
        }
      ]
    }
  ]
}